# Digital-Investment-Analytics

./: .gitignore  Dashboard - Financial Modeling Prep API - FMP.url  README.md  README_DEV.md  README_DEVELOPMENT.md  pyproject.toml  requirements-dev.txt  requirements.txt  version list.txt  version_list.txt
.github/: copilot-instructions.md
.memories/: conventions.md  design-decisions.md  implementation-status.md
.specstory/history/: 2025-11-01_07-06Z-project-name-change-to-digital-investment-analytics.md  2025-11-01_08-13Z-updating-github-copilot-instructions-for-codebase.md  2025-11-26_12-57Z-updating-`-github-copilot-instructions-md`-for-ai-agents.md  2025-12-21_09-52Z-duplicate-fmpclient-files-inquiry.md
config/: My Content - St. Louis Fed.url  api_keys.example.txt  fmp_usage.json
data/plans/: Digital_Investment_Analytics_Development_Specification.docx
notebooks/: 01_FMPClient.ipynb  EDA.ipynb  FMPClient.ipynb  FREDClient.ipynb
src/: __init__.py  config.py  fmp_client.py
src/alphavantage/: __init__.py  client.py  config.py
src/fmp/: __init__.py  client.py  config.py  fmp_client.py  usage.py
src/fmp/tools/: __init__.py  fmp_cli.py
src/fred/: __init__.py  client.py  config.py
src/fred/tools/: fred_cli.py
src/tools/: fmp_cli.py
tests/: __init__.py  test_alphavantage_client.py  test_fmp_client.py  test_fred_client.py  test_setup.py
