[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-investment-analytics"
version = "0.1.1"
description = "Advanced medium to long-term investment analytics using deep learning and ML models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "tedgt97", email = "tedgt97@gmail.com"}
]
keywords = ["stock", "prediction", "machine-learning", "deep-learning", "finance"]

# Dependencies - these get installed with your package
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
]

# Optional dependencies for different use cases
[project.optional-dependencies]
# For deep learning
ml = [
    "tensorflow>=2.13.0",
    "torch>=2.0.0",
    "keras>=2.13.0",
]

# For development
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "ipykernel>=6.25.0",
]

# For data storage
storage = [
    "h5py>=3.9.0",
    "pyarrow>=12.0.0",
]

# All optional dependencies
all = [
    "digital-investment-analytics[ml,dev,storage]"
]

[project.urls]
Homepage = "https://github.com/tedgt97/Digital-Investment-Analytics"
Repository = "https://github.com/tedgt97/Digital-Investment-Analytics"
Documentation = "https://github.com/tedgt97/Digital-Investment-Analytics/blob/main/README.md"

[tool.setuptools]
# Use 'src' as the root so top-level packages like 'fmp' are importable after installation. # --Fixed--
package-dir = {"" = "src"} # --Fixed--

[tool.setuptools.packages.find] # --Added--
where = ["src"] # --Added--

# Black code formatter settings
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Pytest settings
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"